完成进度颜色

--- a/application/index/view/current_task/in-task.html
+++ b/application/index/view/current_task/in-task.html
@@ -34,7 +34,7 @@
             <th>任务编号</th>
             <th>外部图号</th>
             <th>产品名称</th>
-            <th>外来图号</th>
+            <th>外部图号</th>
             <th>材料</th>
             <th>数量</th>
             <th>图纸工艺</th>
