完成进度颜色

--- a/application/index/view/current_task/in-task.html
+++ b/application/index/view/current_task/in-task.html
@@ -32,7 +32,7 @@
           <tr>
             <th>操作</th>
             <th>任务编号</th>
-            <th>外部图号</th>
+            <th>内部图号</th>
             <th>产品名称</th>
             <th>外部图号</th>
             <th>材料</th>
