--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -292,6 +292,12 @@
                             <cite>订单列表</cite>
                         </a>
                     </li >
+                    <li>
+                        <a _href="{:url('index/Delivery/viewShow')}">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>送货单</cite>
+                        </a>
+                    </li >
                 </ul>
             </li>
             {/if}
