--- a/application/index/view/delivery/delivery-details.html
+++ b/application/index/view/delivery/delivery-details.html
@@ -20,7 +20,8 @@
             {volist name="delivery" id="deliveryList"}
             <tr>
               <td>{$deliveryList.deliveryId}</td>
-              <td id="countOrder">{$countOrder}</td>
+              <?php $deliveryId = $deliveryList['deliveryId'] ?>
+              <td id="countOrder">{$orderDatailInfoCount|default='0'}</td>
               <!--<td>{$deliveryList.remarks}</td>-->
             </tr>
             {/volist}
@@ -31,88 +32,152 @@
     </div>
   </fieldset>
   <xblock>
-    <button class="layui-btn" id="addOrder"><i class="layui-icon"></i>添加订单</button>
+    <button class="layui-btn" onclick="x_admin_show('选择明细','{:url(\'index/Delivery/selectOrder\',[\'deliveryId\'=>$deliveryId])}')"><i class="layui-icon"></i>添加订单</button>
     <!--<span class="x-right" style="line-height:40px">共{count}条 · 共{count/25|getInt}页</span>-->
   </xblock>
   <div class="layui-row">
+    {if $orderDatailInfoCount}
     <div class="container-wrap">
       <div class="box-1">
         <table class="layui-table">
           <thead>
           <tr>
-            <th>删除</th>
-            <th>订单编号</th>
-            <th>订单内容</th>
+            <th>操作</th>
+            <th>订单状态</th>
+            <th>图纸明细</th>
+            <th>产品名称</th>
+            <th>材料</th>
+            <th>形状</th>
+            <th>热处理</th>
+            <th>单位</th>
+            <th>订单数量</th>
+            <th>计划数量</th>
+            <th>图纸工艺</th>
+            <th>加工内容</th>
             <th>交货日期</th>
-            <th>客户简称</th>
-            <th>备料</th>
-            <th>订单报价</th>
-            <th>客户项目号</th>
-            <th>完成</th>
-            <th>发货</th>
-            <th>收款</th>
-            <th>评审</th>
-            <th>建档时间</th>
+            <th>完成状态</th>
+            <th>入库数量</th>
+            <th>备注</th>
           </tr>
           </thead>
           <tbody>
-          {if $orderInfo}
-          {volist name ="orderInfo" id="info"}
-          <tr>
-            <td class="td-manage">
-              <a title="删除" onclick="delete_(this,'{$info.order_id}')" href="#" ><i  style="color:red;" class="layui-icon"></i></a>
-            </td>
-            <td>{$info.order_id}</td>
-            <td>{$info.order_content}</td>
-            <td>{$info.delivery_time}</td>
-            <td>{$info.client_id|getClientAbbreviation}</td>
-            <td>{$info.prepare}</td>
-            <td>{$info.order_price}</td>
-            <td>
-              {$info.client_prj_id}
-            </td>
-            <td>
-              {if $info.if_complete == 1} 完成 {else/} 未完成 {/if}
-            </td>
-            <td>
-              {if $info.deliver_goods}已发货{else/}未发货{/if}
-            </td>
-            <td>
-              {if $info.receivables == 1} 已收款 {else/} 未收款 {/if}
-            </td>
-            <td></td>
-            <td>{$info.create_time}</td>
-          </tr>
-          {/volist}
-          {/if}
+            <?php $i = 1;?>
+            {volist name="orderDatailInfo" id="info"}
+            <tr>
+              <?php
+                    $count = getCountExterna($info['drawing_externa_or_internal_id'],$info['order_id']);
+                  ?>
+              <td>
+                <a title="删除" href="javascript:void(0);" onclick="delete_(this,'{$info.id}')" style="color: red">删除</a>
+              </td>
+              <?php
+               $isTask = getIsTask($info['id']);
+               ?>
+              <td>
+                <button title="任务"   style="border: 0;background: transparent;cursor: pointer"  class="renwu" onclick="x_admin_show('订单任务','{:url(\'index/task/inTask\',[\'id\'=>$info.id])}')"
+                        {if $info.arrange =='整体外协'}
+                        disabled
+                        {elseif $info.arrange =='标件不加工'/}
+                        disabled
+                        {elseif $info.arrange =='外协完成'/}
+                        disabled
+                        {/if}
+                >
+                {if $info.arrange =='自加工'}
+                {if $isTask}
+                <?php $wc = getWc($info['id']);?>
+                {if $wc == 1}
+                完成
+                {else}
+                已下任务
+                {/if}
+                {else/}
+                未下任务
+                {/if}
+                {else/}
+                {if $info.arrange =='整体外协'}
+                整体外协
+                {elseif $info.arrange =='标件不加工'/}
+                标件不加工
+                {elseif $info.arrange =='外协完成'/}
+                外协完成
+                {/if}
+                {/if}
+                </button>
+                <!--<a title="任务"  href="javascript:;" onclick="x_admin_show('下达任务','{:url(\'index/ProductTask/addProductTask\',[\'id\'=>$info.id])}',600,500)" >下任务</a>-->
+              </td>
+              <td>
+                {$info.drawing_detail_id|getDrawingDetailId}
+              </td>
+              <td>{$info.drawing_detail_id|getDrawingName}</td>
+              <?php $blueprintInfoList = getblueprintInfoList($info['drawing_detail_id']);?>
+              <td>{$blueprintInfoList.material}</td>
+              <td>{$blueprintInfoList.material_type|getMateria}</td>
+              <td>{$blueprintInfoList.heat_treatment}</td>
+              <td>{$info.company}</td>
+              <td>{$info.order_qty}</td>
+              <td>{$info.plan_qty}</td>
+              <td class="td-manage">
+                {if $blueprintInfoList.files_state==0||$blueprintInfoList.drawing_externa_id==""||!widget('Widget/drawing_check',['drawing_id'=>$blueprintInfoList.drawing_externa_id])}<!-- 不继承或者外图继承无效 -->
+                <a title="图纸" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的图纸文件',
+            '{:url(\'index/blueprint/is_DrawingFiles\',[\'id\'=>$blueprintInfoList.id,\'key\'=>\'wai\',\'drawing_num\'=>$blueprintInfoList.drawing_detail_id])}')" href="javascript:;">
+                  <span class="layui-badge layui-bg-{:widget('Widget/files_check',['id'=>$blueprintInfoList.id,'tip'=>'abroad'])}">图</span></a>
+                {elseif $blueprintInfoList.files_state==1} <!-- 继承 -->
+                <a title="图纸" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的图纸文件',
+            '{:url(\'index/blueprint/is_outDrawing\',[\'id\'=>$blueprintInfoList.drawing_externa_id])}')" href="javascript:;"><span class="layui-badge layui-bg-orange">图</span></a>
+                {/if}
+                <a title="模型" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的3d模型文件',
+            '{:url(\'index/blueprint/is_DrawingFiles\',[\'id\'=>$blueprintInfoList.id,\'key\'=>\'nei\',\'drawing_num\'=>$blueprintInfoList.drawing_detail_id])}')" href="javascript:;"><span class="layui-badge layui-bg-{:widget('Widget/files_check',['id'=>$blueprintInfoList.id,'tip'=>'within'])}">3D</span></a>
+                <a title="程序单" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的程序单文件',
+            '{:url(\'index/blueprint/is_DrawingFiles\',[\'id\'=>$blueprintInfoList.id,\'key\'=>\'cheng\',\'drawing_num\'=>$blueprintInfoList.drawing_detail_id])}')" href="javascript:;"><span class="layui-badge layui-bg-{:widget('Widget/files_check',['id'=>$blueprintInfoList.id,'tip'=>'engineering'])}">程</span></a>
+                {if $blueprintInfoList.is_gongxu !=0}
+                <a title="工"  href="javascript:;" onclick="x_admin_show('<span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的工艺信息','{:url(\'index/blueprint/process\',[\'drawing_detail_id\'=>$blueprintInfoList.drawing_detail_id])}')" ><span class="layui-badge layui-bg-green">工</span></a>
+                {else}
+                <a title="工"  href="javascript:;" onclick="x_admin_show('<span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的工艺信息','{:url(\'index/blueprint/process\',[\'drawing_detail_id\'=>$blueprintInfoList.drawing_detail_id])}')" ><span  class="layui-badge layui-bg-blue">工</span></a>
+                {/if}
+              </td>
+              <td>{$info.content}</td>
+              <td>{$info.date_delivery}</td>
+              <td>
+                {if $info.if_complete == 0 }
+                未完成
+                {else}
+                完成
+                {/if}
+              </td>
+              <td>{$info.warehousing}</td>
+              <td>{$info.remark}</td>
+            </tr>
+            {/volist}
           </tbody>
         </table>
       </div>
     </div>
+    {/if}
   </div>
 </div>
 <script>
-    $("#addOrder").click(function () {
-        top.SearchTeacherLayerId = top.layer.open({
-            title: "给送货单: {$deliverId} 添加订单产品",
-            type: 2,
-            shadeClose: true,
-            area: ['85%', '590px'],
-            content: "{:url('index/Delivery/selectOrder')}",
-            success: function () {
-                $(top.document.body).find('#layui-layer-iframe' + top.SearchTeacherLayerId).contents().find("td a").on('click', function () {
-                    //alert($(this).attr('data-id'));
-                    var order_id = $(this).attr('data-id');//订单编号
-                    var url = "{:url('index/Delivery/addNexus')}";
-                    var data = {'deliverId':'{$deliverId}','orderId':order_id};
-                    $.post(url,data,function(info){
-                    },'json');
-                    window.location.reload();  //刷新父级页面
-                    top.layer.close(top.SearchTeacherLayerId);
-                });
-            }
-        });
-    });
+    // $("#addOrder").click(function () {
+    //     top.SearchTeacherLayerId = top.layer.open({
+    //         title: "给送货单: {$deliverId} 添加订单产品",
+    //         type: 2,
+    //         shadeClose: true,
+    //         area: ['85%', '590px'],
+    //         content: "{:url('index/Delivery/selectOrder')}",
+    //         success: function () {
+    //             $(top.document.body).find('#layui-layer-iframe' + top.SearchTeacherLayerId).contents().find("td a").on('click', function () {
+    //                 //alert($(this).attr('data-id'));
+    //                 var order_id = $(this).attr('data-id');//订单编号
+    //                 var url = "{:url('index/Delivery/addNexus')}";
+    //                 var data = {'deliverId':'{$deliverId}','orderId':order_id};
+    //                 $.post(url,data,function(info){
+    //                 },'json');
+    //                 window.location.reload();  //刷新父级页面
+    //                 top.layer.close(top.SearchTeacherLayerId);
+    //             });
+    //         }
+    //     });
+    // });
 
     /*删除*/
     function delete_(obj,id){
