--- a/application/index/view/delivery/view_order.html
+++ b/application/index/view/delivery/view_order.html
@@ -24,7 +24,10 @@
                     <tbody>
                     {volist name ="orderInfo" id="info"}
                     <tr>
-                        <td><a title="订单明细" href="" style="color: green"  data-id="{$info.order_id}"> {$info.order_id} </a></td>
+                        <!--<td><a title="订单明细" href="" style="color: green"  data-id="{$info.order_id}"> {$info.order_id} </a></td>-->
+                        <td>  <a title="订单明细" style="color: green" onclick="addOrder(this,'{$info.id}')" href="#"> {$info.order_id} </a></td>
+                        <!--<td>  <a title="订单明细" onclick="x_admin_show('<span class=\' layui-bg-blue\'>{$info.order_id}</span> 订单明细','{:url(\'index/Order/orderDetail\',[\'id\'=>$info.id])}')", href="javascript:;"> {$info.order_id} </a></td>-->
+
                         <td>{$info.order_content}</td>
                         <td>{$info.delivery_time}</td>
                         <td>{$info.client_id|getClientAbbreviation}</td>
@@ -56,5 +59,34 @@
     </div>
 </div>
 </body>
+<script>
+        function addOrder(obj,id){
+        var url = "/index/Order/orderDetail/actrion/0/id/"+id;
+
+        //alert("{$deliveryId}");
+        top.SearchTeacherLayerId = top.layer.open({
+            title: "选择产品",
+            type: 2,
+            shadeClose: true,
+            area: ['85%', '590px'],
+            content: url,
+            success: function () {
+                $(top.document.body).find('#layui-layer-iframe' + top.SearchTeacherLayerId).contents().find("td a").on('click', function () {
+                    //alert($(this).attr('data-id'));
+                    var order_id = $(this).attr('data-id');//订单编号
+                    var url = "{:url('index/Delivery/addNexus')}";
+                    // var data = {'id':id};
+                    var data = {'deliverId':'{$deliveryId}','orderId':order_id};
+                    $.post(url,data,function(info){
+                    },'json');
+                    top.layer.close(top.SearchTeacherLayerId);
+                    //window.location.reload();  //刷新父级页面
+                    window.parent.location.reload();
+                });
+            }
+        });
+    }
+
+</script>
 
 </html>
