--- a/application/index/view/delivery/delivery-details.html
+++ b/application/index/view/delivery/delivery-details.html
@@ -33,6 +33,8 @@
   </fieldset>
   <xblock>
     <button class="layui-btn" onclick="x_admin_show('选择明细','{:url(\'index/Delivery/selectOrder\',[\'deliveryId\'=>$deliveryId])}')"><i class="layui-icon"></i>添加订单</button>
+    <a class="layui-btn" href="javascript:location.replace(location.href);">刷新</a>
+
     <!--<span class="x-right" style="line-height:40px">共{count}条 · 共{count/25|getInt}页</span>-->
   </xblock>
   <div class="layui-row">
