--- a/application/index/view/order/order-detail-info.html
+++ b/application/index/view/order/order-detail-info.html
@@ -81,147 +81,172 @@
     <button class="layui-btn" onclick ="x_admin_show('一键复制','{:url(\'index/Order/copyOrderDetail\',[\'id\'=>$id])}',500,400)">一键复制</button>
     <span class="x-right" style="line-height:40px">共条{$orderDatailInfoC} · 未显示 {$orderDatailInfoNoShow} 条 </span>
   </xblock>
-  <div class="layui-row">
-    <div class="container-wrap">
-      <div class="box-1">
-        <table class="layui-table">
-          <thead>
-            <tr>
-              <th>操作</th>
-              <th>订单状态</th>
-              <th>序号</th>
-              <th>图纸明细</th>
-              <th>产品名称</th>
-              <th>材料</th>
-              <th>形状</th>
-              <th>热处理</th>
-              <th>单位</th>
-              <th>订单数量</th>
-              <th>计划数量</th>
-              <th>图纸工艺</th>
-              <th>加工内容</th>
-              <th>交货日期</th>
-              <th>完成状态</th>
-              <th>入库数量</th>
-              <th>备注</th>
-            </tr>
-          </thead>
-          <tbody>
-          <?php $i = 1;?>
-          {volist name="orderDatailInfo" id="info"}
-          <tr>
-            <?php
-                  $count = getCountExterna($info['drawing_externa_or_internal_id'],$info['order_id']);
-                ?>
-                <td>
-                  {if $actrion}
-                  <a title="修改" onclick="x_admin_show('修改订单','{:url(\'index/Order/editOrderDetail\',[\'id\'=>$info.id])}',600,500)", href="javascript:;"><i style="color: green" class="layui-icon"></i></a>
-                  <a title="删除" onclick="delete_(this,'{$info.id}')" href="javascript:void(0);" ><i  style="color:red;" class="layui-icon"></i></a>
-                  {else}
-                  <a title="选择" href="javascript:void(0);" data-id="{$info.id}" style="color: green">选中</a>
-                  {/if}
-                </td>
-            <?php
+    <div class="layui-row">
+        <div class="container-wrap">
+            <div class="box-1">
+                {if !$actrion}
+                <table class="layui-table" id="table0">
+                    <td>
+                        ID: <a data-id="" id="data_a" href="#" style="color: green"></a>   <span style="color: red">请点击左边有效数据</span>
+                    </td>
+                </table>
+                {/if}
+                <table class="layui-table">
+                    <thead>
+                    <tr>
+                        {if $actrion}
+                        <th>操作</th>
+                        {else}
+                        <th  onclick="openAll()">
+                            <div class="layui-unselect header layui-form-checkbox" lay-skin="primary"><i class="layui-icon">&#xe605;</i></div>
+                        </th>
+                        {/if}
+                        <th>订单状态</th>
+                        <th>序号</th>
+                        <th>图纸明细</th>
+                        <th>产品名称</th>
+                        <th>材料</th>
+                        <th>形状</th>
+                        <th>热处理</th>
+                        <th>单位</th>
+                        <th>订单数量</th>
+                        <th>计划数量</th>
+                        <th>图纸工艺</th>
+                        <th>加工内容</th>
+                        <th>交货日期</th>
+                        <th>完成状态</th>
+                        <th>入库数量</th>
+                        <th>备注</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <?php $i = 1;?>
+                    {volist name="orderDatailInfo" id="info"}
+                    <tr>
+                        <?php
+                    $count = getCountExterna($info['drawing_externa_or_internal_id'],$info['order_id']);
+                  ?>
+
+                        {if $actrion}
+                        <td>
+                            <a title="修改" onclick="x_admin_show('修改订单','{:url(\'index/Order/editOrderDetail\',[\'id\'=>$info.id])}',600,500)", href="javascript:;"><i style="color: green" class="layui-icon"></i></a>
+                            <a title="删除" onclick="delete_(this,'{$info.id}')" href="javascript:void(0);" ><i  style="color:red;" class="layui-icon"></i></a>
+                        </td>
+                        {else}
+                        <td onclick="openAll()">
+                            <div class="layui-unselect layui-form-checkbox"  lay-skin="primary" data-id='{$info.id}'><i class="layui-icon">&#xe605;</i></div>
+                        </td>
+                        {/if}
+
+                        <?php
              $isTask = getIsTask($info['id']);
              ?>
-            <td>
-              <button title="任务"   style="border: 0;background: transparent;cursor: pointer"  class="renwu" onclick="x_admin_show('订单任务','{:url(\'index/task/inTask\',[\'id\'=>$info.id])}')"
-                 {if $info.arrange =='整体外协'}
-                       disabled
-                {elseif $info.arrange =='标件不加工'/}
-                       disabled
-                  {elseif $info.arrange =='外协完成'/}
-                  disabled
-                 {/if}
-              >
-                {if $info.arrange =='自加工'}
-                {if $isTask}
-                <?php $wc = getWc($info['id']);?>
-                {if $wc == 1}
-                完成
-                {else}
-                已下任务
-                {/if}
-                {else/}
-                未下任务
-                {/if}
-                {else/}
-                {if $info.arrange =='整体外协'}
-              整体外协
-                {elseif $info.arrange =='标件不加工'/}
-               标件不加工
-              {elseif $info.arrange =='外协完成'/}
-              外协完成
-                {/if}
-                {/if}
-              </button>
-              <!--<a title="任务"  href="javascript:;" onclick="x_admin_show('下达任务','{:url(\'index/ProductTask/addProductTask\',[\'id\'=>$info.id])}',600,500)" >下任务</a>-->
-            </td>
-                <td>
-                  {if $count }
-                  <?php echo  $i ;?>  <a onclick="x_admin_show('修改订单','{:url(\'index/Order/newOrder\',[\'id\'=>$info.order_id,\'ex_or_id\'=>$info.drawing_externa_or_internal_id])}',800,500)", href="javascript:;"><span style="color: red">新</span></a>
-                  {else}
-                  <?php echo  $i ;?>
-                  {/if}
-                  <span class="layui-table-sort layui-inline">
+                        <td>
+                            <button title="任务"   style="border: 0;background: transparent;cursor: pointer"  class="renwu" onclick="x_admin_show('订单任务','{:url(\'index/task/inTask\',[\'id\'=>$info.id])}')"
+                                    {if $info.arrange =='整体外协'}
+                                    disabled
+                                    {elseif $info.arrange =='标件不加工'/}
+                                    disabled
+                                    {elseif $info.arrange =='外协完成'/}
+                                    disabled
+                                    {/if}
+                            >
+                            {if $info.arrange =='自加工'}
+                            {if $isTask}
+                            <?php $wc = getWc($info['id']);?>
+                            {if $wc == 1}
+                            完成
+                            {else}
+                            已下任务
+                            {/if}
+                            {else/}
+                            未下任务
+                            {/if}
+                            {else/}
+                            {if $info.arrange =='整体外协'}
+                            整体外协
+                            {elseif $info.arrange =='标件不加工'/}
+                            标件不加工
+                            {elseif $info.arrange =='外协完成'/}
+                            外协完成
+                            {/if}
+                            {/if}
+                            </button>
+                            <!--<a title="任务"  href="javascript:;" onclick="x_admin_show('下达任务','{:url(\'index/ProductTask/addProductTask\',[\'id\'=>$info.id])}',600,500)" >下任务</a>-->
+                        </td>
+                        <td>
+                            {if $count }
+                            <?php echo  $i ;?>  <a onclick="x_admin_show('修改订单','{:url(\'index/Order/newOrder\',[\'id\'=>$info.order_id,\'ex_or_id\'=>$info.drawing_externa_or_internal_id])}',800,500)", href="javascript:;"><span style="color: red">新</span></a>
+                            {else}
+                            <?php echo  $i ;?>
+                            {/if}
+                            <span class="layui-table-sort layui-inline">
                    <i class="layui-edge layui-table-sort-asc" onclick="SanSort('{$info.id}','asc')"></i>
                    <i class="layui-edge layui-table-sort-desc"  onclick="SanSort('{$info.id}','desc')"></i>
                  </span>
-                </td>
+                        </td>
 
-                <td>
-                   {$info.drawing_detail_id|getDrawingDetailId}
-                </td>
-            <td>{$info.drawing_detail_id|getDrawingName}</td>
-            <?php $blueprintInfoList = getblueprintInfoList($info['drawing_detail_id']);?>
-            <td>{$blueprintInfoList.material}</td>
-            <td>{$blueprintInfoList.material_type|getMateria}</td>
-            <td>{$blueprintInfoList.heat_treatment}</td>
-            <td>{$info.company}</td>
-            <td>{$info.order_qty}</td>
-            <td>{$info.plan_qty}</td>
-            <td class="td-manage">
-              {if $blueprintInfoList.files_state==0||$blueprintInfoList.drawing_externa_id==""||!widget('Widget/drawing_check',['drawing_id'=>$blueprintInfoList.drawing_externa_id])}<!-- 不继承或者外图继承无效 -->
-              <a title="图纸" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的图纸文件',
+                        <td>
+                            {$info.drawing_detail_id|getDrawingDetailId}
+                        </td>
+                        <td>{$info.drawing_detail_id|getDrawingName}</td>
+                        <?php $blueprintInfoList = getblueprintInfoList($info['drawing_detail_id']);?>
+                        <td>{$blueprintInfoList.material}</td>
+                        <td>{$blueprintInfoList.material_type|getMateria}</td>
+                        <td>{$blueprintInfoList.heat_treatment}</td>
+                        <td>{$info.company}</td>
+                        <td>{$info.order_qty}</td>
+                        <td>{$info.plan_qty}</td>
+                        <td class="td-manage">
+                            {if $blueprintInfoList.files_state==0||$blueprintInfoList.drawing_externa_id==""||!widget('Widget/drawing_check',['drawing_id'=>$blueprintInfoList.drawing_externa_id])}<!-- 不继承或者外图继承无效 -->
+                            <a title="图纸" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的图纸文件',
           '{:url(\'index/blueprint/is_DrawingFiles\',[\'id\'=>$blueprintInfoList.id,\'key\'=>\'wai\',\'drawing_num\'=>$blueprintInfoList.drawing_detail_id])}')" href="javascript:;">
-                <span class="layui-badge layui-bg-{:widget('Widget/files_check',['id'=>$blueprintInfoList.id,'tip'=>'abroad'])}">图</span></a>
-              {elseif $blueprintInfoList.files_state==1} <!-- 继承 -->
-              <a title="图纸" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的图纸文件',
+                                <span class="layui-badge layui-bg-{:widget('Widget/files_check',['id'=>$blueprintInfoList.id,'tip'=>'abroad'])}">图</span></a>
+                            {elseif $blueprintInfoList.files_state==1} <!-- 继承 -->
+                            <a title="图纸" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的图纸文件',
           '{:url(\'index/blueprint/is_outDrawing\',[\'id\'=>$blueprintInfoList.drawing_externa_id])}')" href="javascript:;"><span class="layui-badge layui-bg-orange">图</span></a>
-              {/if}
-              <a title="模型" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的3d模型文件',
+                            {/if}
+                            <a title="模型" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的3d模型文件',
           '{:url(\'index/blueprint/is_DrawingFiles\',[\'id\'=>$blueprintInfoList.id,\'key\'=>\'nei\',\'drawing_num\'=>$blueprintInfoList.drawing_detail_id])}')" href="javascript:;"><span class="layui-badge layui-bg-{:widget('Widget/files_check',['id'=>$blueprintInfoList.id,'tip'=>'within'])}">3D</span></a>
-              <a title="程序单" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的程序单文件',
+                            <a title="程序单" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的程序单文件',
           '{:url(\'index/blueprint/is_DrawingFiles\',[\'id\'=>$blueprintInfoList.id,\'key\'=>\'cheng\',\'drawing_num\'=>$blueprintInfoList.drawing_detail_id])}')" href="javascript:;"><span class="layui-badge layui-bg-{:widget('Widget/files_check',['id'=>$blueprintInfoList.id,'tip'=>'engineering'])}">程</span></a>
-              {if $blueprintInfoList.is_gongxu !=0}
-              <a title="工"  href="javascript:;" onclick="x_admin_show('<span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的工艺信息','{:url(\'index/blueprint/process\',[\'drawing_detail_id\'=>$blueprintInfoList.drawing_detail_id])}')" ><span class="layui-badge layui-bg-green">工</span></a>
-              {else}
-              <a title="工"  href="javascript:;" onclick="x_admin_show('<span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的工艺信息','{:url(\'index/blueprint/process\',[\'drawing_detail_id\'=>$blueprintInfoList.drawing_detail_id])}')" ><span  class="layui-badge layui-bg-blue">工</span></a>
-              {/if}
-            </td>
-                <td>{$info.content}</td>
-                <td>{$info.date_delivery}</td>
-                <td>
-                  {if $info.if_complete == 0 }
-                    未完成
-                  {else}
-                    完成
-                  {/if}
-                </td>
-              <td>{$info.warehousing}</td>
-              <td>{$info.remark}</td>
-              </tr>
-          {/volist}
-          </tbody>
-        </table>
-      </div>
+                            {if $blueprintInfoList.is_gongxu !=0}
+                            <a title="工"  href="javascript:;" onclick="x_admin_show('<span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的工艺信息','{:url(\'index/blueprint/process\',[\'drawing_detail_id\'=>$blueprintInfoList.drawing_detail_id])}')" ><span class="layui-badge layui-bg-green">工</span></a>
+                            {else}
+                            <a title="工"  href="javascript:;" onclick="x_admin_show('<span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的工艺信息','{:url(\'index/blueprint/process\',[\'drawing_detail_id\'=>$blueprintInfoList.drawing_detail_id])}')" ><span  class="layui-badge layui-bg-blue">工</span></a>
+                            {/if}
+                        </td>
+                        <td>{$info.content}</td>
+                        <td>{$info.date_delivery}</td>
+                        <td>
+                            {if $info.if_complete == 0 }
+                            未完成
+                            {else}
+                            完成
+                            {/if}
+                        </td>
+                        <td>{$info.warehousing}</td>
+                        <td>{$info.remark}</td>
+                    </tr>
+                    {/volist}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="page">
+            {$orderDatailInfo|raw}
+        </div>
     </div>
-    <div class="page">
-      {$orderDatailInfo|raw}
-    </div>
-  </div>
 </div>
 <script>
+    function openAll () {
+        var data = tableCheck.getData();
+        to(data);
+    }
+    function to(data) {
+        $("#data_a").attr('data-id',data);
+        $("#data_a").text(data+" 已选"+data.length+"项");
+    }
   function show(obj,id,show) {
       layer.confirm('确定要更改吗？',function(index){
           var url = "{:url('/index/Order/updateShow')}";
