--- a/application/index/view/delivery/view_order.html
+++ b/application/index/view/delivery/view_order.html
@@ -80,7 +80,7 @@
                     },'json');
                     top.layer.close(top.SearchTeacherLayerId);
                     window.location.reload();  //刷新父级页面
-                    layer.msg('请稍后...', {icon:3,time:5000});
+                    //layer.msg('请稍后...', {icon:3,time:5000});
                     layer.msg('写入成功!',{icon:1,time:1000});
 
                 });
