--- a/application/index/view/order/order_detail_add.html
+++ b/application/index/view/order/order_detail_add.html
@@ -22,6 +22,7 @@
           <div class="layui-input-inline" style="width: 200px;">
             <input type="text" value="{$info.drawing_detail_id}"  disabled  required="" lay-verify="required" placeholder="请输入标题" autocomplete="off" class="layui-input">
             <input type="hidden" value="{$info.id}"  disabled  name="drawing_detail_id[]" required="" lay-verify="required" placeholder="请输入标题" autocomplete="off" class="layui-input">
+          <input type="hidden" value="{$type}" name="type">
           </div>
         </div>
         <div class="layui-inline">
@@ -129,12 +130,29 @@
             <!--<input type="text" name="warehousing[]" autocomplete="off" class="layui-input">-->
           <!--</div>-->
         <!--</div>-->
+
+        {switch$a}
+        {case 1}
+        <div class="layui-inline">
+          <label class="layui-form-label">所属内图编号</label>
+          <div class="layui-input-inline" style="width: 300px;">
+            <input type="text" autocomplete="off" disabled name="drawing_externa_or_internal_id[]" value="{$info.drawing_internal_id}" class="layui-input">
+          </div>
+        </div>
+        {/case}
+        {case 0}
         <div class="layui-inline">
           <label class="layui-form-label">所属外图编号</label>
           <div class="layui-input-inline" style="width: 300px;">
             <input type="text" autocomplete="off" disabled name="drawing_externa_or_internal_id[]" value="{$info.drawing_externa_id}" class="layui-input">
+
           </div>
         </div>
+        {/case}
+        {default /}default
+        {/switch}
+
+
 
         <div class="layui-inline">
           <label class="layui-form-label">备注</label>
