--- a/application/index/view/delivery/delivery-details.html
+++ b/application/index/view/delivery/delivery-details.html
@@ -10,7 +10,7 @@
           <table class="layui-table">
             <thead>
             <tr>
-              <th>单据编号</th>
+              <th>明细编号</th>
               <th>发货数量</th>
               <!--<th>备注</th>-->
             </tr>
@@ -19,9 +19,9 @@
             <tbody>
             {volist name="delivery" id="deliveryList"}
             <tr>
-              <td>{$deliveryList.deliveryId}</td>
-              <?php $deliveryId = $deliveryList['deliveryId'] ?>
-              <td id="countOrder">{$orderDatailInfoCount|default='0'}</td>
+              <td>{$deliveryList.deliveryInfoId}</td>
+              <?php $deliveryId = $deliveryList['deliveryInfoId'] ?>
+              <td id="countOrder">{$deliveryList.quantity|default='0'}</td>
               <!--<td>{$deliveryList.remarks}</td>-->
             </tr>
             {/volist}
@@ -44,22 +44,11 @@
         <table class="layui-table">
           <thead>
           <tr>
-            <th>操作</th>
-            <th>订单状态</th>
+            <th width="40px;">操作</th>
+            <th>所属订单</th>
             <th>图纸明细</th>
             <th>产品名称</th>
-            <th>材料</th>
-            <th>形状</th>
-            <th>热处理</th>
-            <th>单位</th>
             <th>订单数量</th>
-            <th>计划数量</th>
-            <th>图纸工艺</th>
-            <th>加工内容</th>
-            <th>交货日期</th>
-            <th>完成状态</th>
-            <th>入库数量</th>
-            <th>备注</th>
           </tr>
           </thead>
           <tbody>
@@ -70,85 +59,17 @@
                     $count = getCountExterna($info['drawing_externa_or_internal_id'],$info['order_id']);
                   ?>
               <td>
-                <a title="删除" href="javascript:void(0);" onclick="delete_(this,'{$info.id}')" style="color: red">删除</a>
+                <a title="删除" href="javascript:void(0);" onclick="delete_(this,'{$info.id}','{$info.order_qty}')" style="color: red">删除</a>
               </td>
               <?php
                $isTask = getIsTask($info['id']);
                ?>
-              <td>
-                <button title="任务"   style="border: 0;background: transparent;cursor: pointer"  class="renwu" onclick="x_admin_show('订单任务','{:url(\'index/task/inTask\',[\'id\'=>$info.id])}')"
-                        {if $info.arrange =='整体外协'}
-                        disabled
-                        {elseif $info.arrange =='标件不加工'/}
-                        disabled
-                        {elseif $info.arrange =='外协完成'/}
-                        disabled
-                        {/if}
-                >
-                {if $info.arrange =='自加工'}
-                {if $isTask}
-                <?php $wc = getWc($info['id']);?>
-                {if $wc == 1}
-                完成
-                {else}
-                已下任务
-                {/if}
-                {else/}
-                未下任务
-                {/if}
-                {else/}
-                {if $info.arrange =='整体外协'}
-                整体外协
-                {elseif $info.arrange =='标件不加工'/}
-                标件不加工
-                {elseif $info.arrange =='外协完成'/}
-                外协完成
-                {/if}
-                {/if}
-                </button>
-                <!--<a title="任务"  href="javascript:;" onclick="x_admin_show('下达任务','{:url(\'index/ProductTask/addProductTask\',[\'id\'=>$info.id])}',600,500)" >下任务</a>-->
-              </td>
+              <td>{$info.order_id|getOrderId}</td>
               <td>
                 {$info.drawing_detail_id|getDrawingDetailId}
               </td>
               <td>{$info.drawing_detail_id|getDrawingName}</td>
-              <?php $blueprintInfoList = getblueprintInfoList($info['drawing_detail_id']);?>
-              <td>{$blueprintInfoList.material}</td>
-              <td>{$blueprintInfoList.material_type|getMateria}</td>
-              <td>{$blueprintInfoList.heat_treatment}</td>
-              <td>{$info.company}</td>
               <td>{$info.order_qty}</td>
-              <td>{$info.plan_qty}</td>
-              <td class="td-manage">
-                {if $blueprintInfoList.files_state==0||$blueprintInfoList.drawing_externa_id==""||!widget('Widget/drawing_check',['drawing_id'=>$blueprintInfoList.drawing_externa_id])}<!-- 不继承或者外图继承无效 -->
-                <a title="图纸" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的图纸文件',
-            '{:url(\'index/blueprint/is_DrawingFiles\',[\'id\'=>$blueprintInfoList.id,\'key\'=>\'wai\',\'drawing_num\'=>$blueprintInfoList.drawing_detail_id])}')" href="javascript:;">
-                  <span class="layui-badge layui-bg-{:widget('Widget/files_check',['id'=>$blueprintInfoList.id,'tip'=>'abroad'])}">图</span></a>
-                {elseif $blueprintInfoList.files_state==1} <!-- 继承 -->
-                <a title="图纸" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的图纸文件',
-            '{:url(\'index/blueprint/is_outDrawing\',[\'id\'=>$blueprintInfoList.drawing_externa_id])}')" href="javascript:;"><span class="layui-badge layui-bg-orange">图</span></a>
-                {/if}
-                <a title="模型" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的3d模型文件',
-            '{:url(\'index/blueprint/is_DrawingFiles\',[\'id\'=>$blueprintInfoList.id,\'key\'=>\'nei\',\'drawing_num\'=>$blueprintInfoList.drawing_detail_id])}')" href="javascript:;"><span class="layui-badge layui-bg-{:widget('Widget/files_check',['id'=>$blueprintInfoList.id,'tip'=>'within'])}">3D</span></a>
-                <a title="程序单" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的程序单文件',
-            '{:url(\'index/blueprint/is_DrawingFiles\',[\'id\'=>$blueprintInfoList.id,\'key\'=>\'cheng\',\'drawing_num\'=>$blueprintInfoList.drawing_detail_id])}')" href="javascript:;"><span class="layui-badge layui-bg-{:widget('Widget/files_check',['id'=>$blueprintInfoList.id,'tip'=>'engineering'])}">程</span></a>
-                {if $blueprintInfoList.is_gongxu !=0}
-                <a title="工"  href="javascript:;" onclick="x_admin_show('<span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的工艺信息','{:url(\'index/blueprint/process\',[\'drawing_detail_id\'=>$blueprintInfoList.drawing_detail_id])}')" ><span class="layui-badge layui-bg-green">工</span></a>
-                {else}
-                <a title="工"  href="javascript:;" onclick="x_admin_show('<span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的工艺信息','{:url(\'index/blueprint/process\',[\'drawing_detail_id\'=>$blueprintInfoList.drawing_detail_id])}')" ><span  class="layui-badge layui-bg-blue">工</span></a>
-                {/if}
-              </td>
-              <td>{$info.content}</td>
-              <td>{$info.date_delivery}</td>
-              <td>
-                {if $info.if_complete == 0 }
-                未完成
-                {else}
-                完成
-                {/if}
-              </td>
-              <td>{$info.warehousing}</td>
-              <td>{$info.remark}</td>
             </tr>
             {/volist}
           </tbody>
@@ -182,16 +103,20 @@
     // });
 
     /*删除*/
-    function delete_(obj,id){
+    function delete_(obj,id,qty){
         layer.confirm('从发货单列表中删除？',function(index){
             var url = "{:url('/index/Delivery/delOrder')}";
-            var postData ={"id":id};
+            var countOrder = $("#countOrder").text();
+            var nuber = countOrder-qty;
+            $("#countOrder").text(nuber);
+            var postData ={"id":id,"qty":nuber};
             $.post(url,postData,function (result) {
                 if(result){
                     $(obj).parents("tr").remove();
-                    var countOrder = $("#countOrder").text();
-                    $("#countOrder").text(countOrder-1);
+                    //window.location.reload();  //刷新父级页面
+                    //location.replace(location.href);
                     layer.msg('已删除!',{icon:1,time:1000});
+                    $("#sx").click();
                 }else {
                     layer.alert("删除失败", {icon: 5});
                 }
