--- a/application/index/view/internal/add-drawing-detial.html
+++ b/application/index/view/internal/add-drawing-detial.html
@@ -33,7 +33,7 @@
                     <select name="modules" lay-verify="required" lay-search="" id="findText">
                         <option value=""></option>
                         {volist name="$detailArray.material" id="materialList"}
-                        <option value="{$materialList.material_id}">{$materialList.material_id}</option>
+                        <option value="{$materialList.id}">{$materialList.material_id}</option>
                         {/volist}
                     </select>
                 </div>
